[gd_scene load_steps=7 format=2]

[ext_resource path="res://Fontes/GOTHAMBOLDITALIC.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Cenas/Menus/Menu.gd" type="Script" id=2]
[ext_resource path="res://Fontes/GOTHAM-BLACK.OTF" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 1.0
expand_margin_bottom = 1.0

[sub_resource type="DynamicFont" id=2]
size = 75
outline_color = Color( 0.388235, 0.784314, 0.164706, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxC_Janela" type="VBoxContainer" parent="MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 688.0
margin_bottom = 992.0
size_flags_horizontal = 5
size_flags_vertical = 5
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer_Titulo" type="CenterContainer" parent="MarginContainer/VBoxC_Janela"]
margin_right = 656.0
margin_bottom = 351.0
size_flags_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxC_Janela/CenterContainer_Titulo"]
margin_left = 87.0
margin_right = 568.0
margin_bottom = 351.0
custom_constants/margin_right = 50
custom_constants/margin_top = 150
custom_constants/margin_left = 50
custom_constants/margin_bottom = 130

[node name="Titulo" type="Label" parent="MarginContainer/VBoxC_Janela/CenterContainer_Titulo/MarginContainer"]
margin_left = 50.0
margin_top = 150.0
margin_right = 431.0
margin_bottom = 221.0
grow_horizontal = 0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_constants/line_spacing = 1
text = "NEXTGEN"
align = 1
valign = 1

[node name="MarginContainer_Buttons" type="MarginContainer" parent="MarginContainer/VBoxC_Janela"]
margin_top = 355.0
margin_right = 656.0
margin_bottom = 811.0
size_flags_vertical = 2
custom_constants/margin_top = 64
custom_constants/margin_bottom = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxC_Janela/MarginContainer_Buttons"]
margin_top = 64.0
margin_right = 656.0
margin_bottom = 456.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer"]
margin_right = 656.0
margin_bottom = 128.0
custom_constants/margin_right = 80
custom_constants/margin_top = 32
custom_constants/margin_left = 80
custom_constants/margin_bottom = 32

[node name="ButtonJogar" type="Button" parent="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer/MarginContainer"]
margin_left = 80.0
margin_top = 32.0
margin_right = 576.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 64 )
size_flags_horizontal = 7
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Jogar"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer"]
margin_top = 132.0
margin_right = 656.0
margin_bottom = 260.0
custom_constants/margin_right = 80
custom_constants/margin_top = 32
custom_constants/margin_left = 80
custom_constants/margin_bottom = 32

[node name="ButtonPontos" type="Button" parent="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer/MarginContainer3"]
margin_left = 80.0
margin_top = 32.0
margin_right = 576.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 64 )
rect_clip_content = true
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Pontuação"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer"]
margin_top = 264.0
margin_right = 656.0
margin_bottom = 392.0
custom_constants/margin_right = 80
custom_constants/margin_top = 32
custom_constants/margin_left = 80
custom_constants/margin_bottom = 32

[node name="ButtonConfigurar" type="Button" parent="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer/MarginContainer4"]
margin_left = 80.0
margin_top = 32.0
margin_right = 576.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 64 )
rect_clip_content = true
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "Configurações"

[connection signal="pressed" from="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer/MarginContainer/ButtonJogar" to="." method="_on_ButtonJogar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer/MarginContainer3/ButtonPontos" to="." method="_on_ButtonPontos_pressed"]
[connection signal="button_down" from="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer/MarginContainer4/ButtonConfigurar" to="." method="_on_ButtonConfigurar_button_down"]
[connection signal="pressed" from="MarginContainer/VBoxC_Janela/MarginContainer_Buttons/VBoxContainer/MarginContainer4/ButtonConfigurar" to="." method="_on_ButtonConfigurar_pressed"]
